--- a/HexGrid.Demo/_Imports.razor
+++ b/HexGrid.Demo/_Imports.razor
@@ -9,6 +9,6 @@
 @using HexGrid.Demo
 @using HexGrid.Demo.Layout
 @using HexGrid.Demo.Components
-@using HexGrid.Lib.Models
-@using HexGrid.Lib.Models.Coordinates
-@using HexGrid.Lib.Models.Layout
+@using HexGrid.Models
+@using HexGrid.Models.Coordinates
+@using HexGrid.Models.Layout
